nested/network_with_waf.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "moodleCommon": {
            "metadata": {
                "description": "Common Moodle values"
            },
            "type": "object"
        }
    },
    "resources": [
        {
            "condition": "[equals(parameters('moodleCommon').customVnetId, '')]",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2017-05-10",
            "name": "vnetTemplate",
            "properties": {
                "mode": "Incremental",
                "parameters": {
                    "moodleCommon": {
                        "value": "[parameters('moodleCommon')]"
                    }
                },
                "templateLink": {
                    "uri": "[concat(parameters('moodleCommon').baseTemplateUrl,'network-vnet.json',parameters('moodleCommon').artifactsSasToken)]"
                }
            }
        },
        {
            "apiVersion": "2018-02-01",
            "condition": "[parameters('moodleCommon').ddosSwitch]",
            "dependsOn": [
                "Microsoft.Resources/deployments/vnetTemplate"
            ],
            "name": "ddosTemplate",
            "subscriptionId": "[variables('vnetSub')]",
            "resourceGroup": "[variables('vnetRg')]",
            "properties": {
                "mode": "Incremental",
                "parameters": {
                    "moodleCommon": {
                        "value": "[parameters('moodleCommon')]"
                    },
                    "vnetName": {
                        "value": "[variables('vnetName')]"
                    },
                    "vNetAddressSpace": {
                        "value": "[if(equals(parameters('moodleCommon').customVnetId, ''), concat(parameters('moodleCommon').vNetAddressSpace,'/16'), reference(parameters('moodleCommon').customVnetId, '2017-10-01').addressSpace.addressPrefixes[0])]"
                    }
                },
                "templateLink": {
                    "uri": "[concat(parameters('moodleCommon').baseTemplateUrl,'network-vnet-ddos.json',parameters('moodleCommon').artifactsSasToken)]"
                }
            },
            "type": "Microsoft.Resources/deployments"
        },
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2017-05-10",
            "dependsOn": [
                "Microsoft.Resources/deployments/vnetTemplate",
                "Microsoft.Resources/deployments/ddosTemplate"
            ],
            "name": "subnetTemplate",
            "subscriptionId": "[variables('vnetSub')]",
            "resourceGroup": "[variables('vnetRg')]",
            "properties": {
                "mode": "Incremental",
                "parameters": {
                    "moodleCommon": {
                        "value": "[parameters('moodleCommon')]"
                    },
                    "vnetName": {
                        "value": "[variables('vnetName')]"
                    }
                },
                "templateLink": {
                    "uri": "[concat(parameters('moodleCommon').baseTemplateUrl,'network-subnets_with_waf.json',parameters('moodleCommon').artifactsSasToken)]"
                }
            }
        },
        {
            "condition": "[parameters('moodleCommon').vnetGwDeploySwitch]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').gatewayPublicIPName]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            },
            "tags": {
                "displayName": "Virtual network gateway Public IP"
            }
        },
        {
            "condition": "[parameters('moodleCommon').vnetGwDeploySwitch]",
            "type": "Microsoft.Network/virtualNetworkGateways",
            "apiVersion": "2017-10-01",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('moodleCommon').gatewayPublicIPName)]",
                "Microsoft.Resources/deployments/subnetTemplate"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').gatewayName]",
            "properties": {
                "activeActive": false,
                "enableBgp": false,
                "gatewayType": "[parameters('moodleCommon').gatewayType]",
                "ipConfigurations": [
                    {
                        "name": "vnet-Gateway-Config",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('moodleCommon').gatewayPublicIPName)]"
                            },
                            "subnet": {
                                "id": "[variables('subnetIdGateway')]"
                            }
                        }
                    }
                ],
                "sku": {
                    "name": "VpnGw1",
                    "tier": "VpnGw1",
                    "capacity": 2
                },
                "vpnType": "[parameters('moodleCommon').vpnType]"
            }
        },
        {
            "condition": "[not(equals(parameters('moodleCommon').httpsTermination, 'AppGw'))]",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "[parameters('moodleCommon').lbSku]"
            },
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').lbPipName]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('moodleCommon').lbName]"
                },
                "publicIPAllocationMethod": "Static"
            },
            "tags": {
                "displayName": "Load Balancer Public IP"
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "[parameters('moodleCommon').waflbSku]"
            },
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').waflbPipName]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('moodleCommon').waflbName]"
                },
                "publicIPAllocationMethod": "Static"
            },
            "tags": {
                "displayName": "WAF's Load Balancer Public IP"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "name": "[concat(parameters('moodleCommon').waflbSku,'NSG')]",
            "location": "[resourceGroup().location]",
            "tags": {
              "displayName": "NSG-WAF"
            },
            "properties": {
              "securityRules": [
                {
                  "name": "http-mgmt",
                  "properties": {
                    "description": "MGMT_-_HTTP",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "8000",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1010,
                    "direction": "Inbound"
                  }
                },
                {
                  "name": "https",
                  "properties": {
                    "description": "HTTPS",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1020,
                    "direction": "Inbound"
                  }
                },
                {
                  "name": "https-mgmt",
                  "properties": {
                    "description": "MGMT_-_HTTPS",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "8443",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1030,
                    "direction": "Inbound"
                  }
                }
              ]
            }
          },
        {
            "condition": "[equals(parameters('moodleCommon').httpsTermination, 'AppGw')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').appGwPipName]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('moodleCommon').appGwName]"
                },
                "publicIPAllocationMethod": "Dynamic"
            },
            "tags": {
                "displayName": "App Gateway Public IP (must be dynamic)"
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').ctlrPipName]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('moodleCommon').ctlrPipName]"
                },
                "publicIPAllocationMethod": "Static"
            },
            "tags": {
                "displayName": "Controller VM Public IP"
            }
        },
        {
            "condition": "[not(equals(parameters('moodleCommon').httpsTermination, 'AppGw'))]",
            "type": "Microsoft.Network/loadBalancers",
            "sku": {
                "name": "[parameters('moodleCommon').lbSku]"
            },
            "apiVersion": "2017-10-01",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/',parameters('moodleCommon').lbPipName)]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').lbName]",
            "properties": {
                "backendAddressPools": [
                    {
                        "name": "[parameters('moodleCommon').extBeName ]"
                    }
                ],
                "frontendIPConfigurations": [
                    {
                        "name": "[parameters('moodleCommon').extFeName ]",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[variables('lbPipID')]"
                            }
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "Http",
                        "properties": {
                            "backendAddressPool": {
                                "id": "[variables('extBeID')]"
                            },
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "frontendIPConfiguration": {
                                "id": "[variables('extFeID')]"
                            },
                            "frontendPort": 80,
                            "idleTimeoutInMinutes": 5,
                            "probe": {
                                "id": "[variables('extProbeID')]"
                            },
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "Https",
                        "properties": {
                            "backendAddressPool": {
                                "id": "[variables('extBeID')]"
                            },
                            "backendPort": 443,
                            "enableFloatingIP": false,
                            "frontendIPConfiguration": {
                                "id": "[variables('extFeID')]"
                            },
                            "frontendPort": 443,
                            "idleTimeoutInMinutes": 5,
                            "probe": {
                                "id": "[variables('extProbeID')]"
                            },
                            "protocol": "Tcp"
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "[parameters('moodleCommon').extProbe  ]",
                        "properties": {
                            "intervalInSeconds": 5,
                            "numberOfProbes": 3,
                            "port": 80,
                            "protocol": "Tcp"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "sku": {
                "name": "[parameters('moodleCommon').waflbSku]"
            },
            "apiVersion": "2017-10-01",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/',parameters('moodleCommon').waflbPipName)]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('moodleCommon').waflbName]",
            "properties": {
              "frontendIPConfigurations": [
                {
                  "name": "[parameters('moodleCommon').wafextFeName ]",
                  "properties": {
                    "publicIPAddress": {
                      "id": "[variables('waflbPipID')]"
                    }
                  }
                }
              ],
              "backendAddressPools": [
                {
                  "name": "[parameters('moodleCommon').wafextBeName ]"
                }
              ],
              "loadBalancingRules": [
                {
                    "name": "wafHttp",
                    "properties": {
                        "backendAddressPool": {
                            "id": "[variables('wafextBeID')]"
                        },
                        "backendPort": 80,
                        "enableFloatingIP": false,
                        "frontendIPConfiguration": {
                            "id": "[variables('wafextFeID')]"
                        },
                        "frontendPort": 80,
                        "idleTimeoutInMinutes": 5,
                        "probe": {
                            "id": "[variables('wafextProbeID')]"
                        },
                        "protocol": "Tcp"
                    }
                },
                {
                    "name": "wafHttps",
                    "properties": {
                        "backendAddressPool": {
                            "id": "[variables('wafextBeID')]"
                        },
                        "backendPort": 443,
                        "enableFloatingIP": false,
                        "frontendIPConfiguration": {
                            "id": "[variables('wafextFeID')]"
                        },
                        "frontendPort": 443,
                        "idleTimeoutInMinutes": 5,
                        "probe": {
                            "id": "[variables('wafextProbeID')]"
                        },
                        "protocol": "Tcp"
                    }
                }
            ],
              "probes": [
                {
                  "properties": {
                    "protocol": "Tcp",
                    "port": 80,
                    "intervalInSeconds": 5,
                    "numberOfProbes": 3
                  },
                  "name": "[parameters('moodleCommon').wafextProbe  ]"
                }
              ],
              "inboundNatPools": [
                {
                  "name": "[variables('wafnatPoolName')]",
                  "properties": {
                    "frontendIPConfiguration": {
                      "id": "[variables('wafextFeID')]"
                    },
                    "protocol": "tcp",
                    "frontendPortRangeStart": "8000",
                    "frontendPortRangeEnd": "8100",
                    "backendPort": "8000"
                  }
                },
                {
                  "name": "[variables('wafnatPoolNameHttps')]",
                  "properties": {
                    "frontendIPConfiguration": {
                      "id": "[variables('wafextFeID')]"
                    },
                    "protocol": "tcp",
                    "frontendPortRangeStart": "8443",
                    "frontendPortRangeEnd": "8543",
                    "backendPort": "8443"
                  }
                }
              ]
            }
          },
        {
            "condition": "[equals(parameters('moodleCommon').httpsTermination, 'AppGw')]",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2017-05-10",
            "dependsOn": [
                "Microsoft.Resources/deployments/subnetTemplate",
                "[concat('Microsoft.Network/publicIPAddresses/',parameters('moodleCommon').lbPipName)]"
            ],
            "name": "appGwTemplate",
            "properties": {
                "mode": "Incremental",
                "parameters": {
                    "moodleCommon": {
                        "value": "[parameters('moodleCommon')]"
                    },
                    "subnetIdAppGw": {
                        "value": "[variables('subnetIdAppGw')]"
                    },
                    "sslCertData": {
                        "reference": {
                            "keyVault": {
                                "id": "[parameters('moodleCommon').appGwSslCertKeyVaultResourceId]"
                            },
                            "secretName": "[parameters('moodleCommon').appGwSslCertKeyVaultSecretName]"
                        }
                    }
                },
                "templateLink": {
                    "uri": "[concat(parameters('moodleCommon').baseTemplateUrl,'appgw.json',parameters('moodleCommon').artifactsSasToken)]"
                }
            }
        }
    ],
    "variables": {
        "documentation01": "This sub-template creates a virtual network with a number of subnets and then creates the moodle load-balancer (or an Azure Application Gateway) with public IP/dns",
        "extBeID": "[concat(variables('extLbID'),'/backendAddressPools/',parameters('moodleCommon').extBeName)]",
        "extFeID": "[concat(variables('extLbID'),'/frontendIPConfigurations/',parameters('moodleCommon').extFeName)]",
        "wafextBeID": "[concat(variables('wafextLbID'),'/backendAddressPools/',parameters('moodleCommon').wafextBeName)]",
        "wafextFeID": "[concat(variables('wafextLbID'),'/frontendIPConfigurations/',parameters('moodleCommon').wafextFeName)]",
        "wafnamingInfix": "[toLower(substring(concat(parameters('moodleCommon').wafvmssName, uniqueString(resourceGroup().location)), 0, 9))]",
        "wafnatPoolName": "[concat(variables('wafnamingInfix'), 'natpool')]",
        "wafnatPoolNameHttps": "[concat(variables('wafnamingInfix'), 'natpoolHttps')]",
        "extLbID": "[resourceId('Microsoft.Network/loadBalancers',parameters('moodleCommon').lbName)]",
        "wafextLbID": "[resourceId('Microsoft.Network/loadBalancers',parameters('moodleCommon').waflbName)]",
        "extProbeID": "[concat(variables('extLbID'),'/probes/',parameters('moodleCommon').extProbe)]",
        "wafextProbeID": "[concat(variables('wafextLbID'),'/probes/',parameters('moodleCommon').wafextProbe)]",
        "lbPipID": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('moodleCommon').lbPipName)]",
        "waflbPipID": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('moodleCommon').waflbPipName)]",
        "ctlrPipID": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('moodleCommon').ctlrPipName)]",
        "customVnetIdArr":              "[split(parameters('moodleCommon').customVnetId, '/')]",
        "vnetSub":                      "[if(equals(parameters('moodleCommon').customVnetId, ''), subscription().subscriptionId, variables('customVnetIdArr')[2])]",
        "vnetRg":                       "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceGroup().name, variables('customVnetIdArr')[4])]",
        "vnetName":                     "[if(equals(parameters('moodleCommon').customVnetId, ''), parameters('moodleCommon').vnetName, variables('customVnetIdArr')[8])]",
        "customVnetSubnetIdWeb":        "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetWeb)]",
        "customVnetSubnetIdWaf":        "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetWaf)]",
        "customVnetSubnetIdSan":        "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetSan)]",
        "customVnetSubnetIdRedis":      "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetRedis)]",
        "customVnetSubnetIdElastic":    "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetElastic)]",
        "customVnetSubnetIdTika":       "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetTika)]",
        "customVnetSubnetIdGateway":    "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetGateway)]",
        "customVnetSubnetIdAppGw":      "[concat(parameters('moodleCommon').customVnetId, '/subnets/', parameters('moodleCommon').subnetAppGw)]",
        "subnetIdWeb":      "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetWeb), variables('customVnetSubnetIdWeb'))]",
        "subnetIdWaf":      "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetWaf), variables('customVnetSubnetIdWaf'))]",
        "subnetIdSan":      "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetSan), variables('customVnetSubnetIdSan'))]",
        "subnetIdRedis":    "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetRedis), variables('customVnetSubnetIdRedis'))]",
        "subnetIdElastic":  "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetElastic), variables('customVnetSubnetIdElastic'))]",
        "subnetIdTika":     "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetTika), variables('customVnetSubnetIdTika'))]",
        "subnetIdGateway":  "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetGateway), variables('customVnetSubnetIdGateway'))]",
        "subnetIdAppGw":    "[if(equals(parameters('moodleCommon').customVnetId, ''), resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), parameters('moodleCommon').subnetAppGw), variables('customVnetSubnetIdAppGw'))]"
    },
    "outputs": {
        "lbPubIp": {
            "value": "[if(equals(parameters('moodleCommon').httpsTermination, 'AppGw'), '0.0.0.0', reference(parameters('moodleCommon').lbPipName, '2017-10-01').ipAddress)]",
            "type": "string"
        },
        "ctlrPubIp": {
            "value": "[reference(parameters('moodleCommon').ctlrPipName, '2017-10-01').ipAddress]",
            "type": "string"
        },
        "ctlrPubIpId": {
            "value": "[variables('ctlrPipID')]",
            "type": "string"
        },
        "subnetIdWeb": {
            "value": "[variables('subnetIdWeb')]",
            "type": "string"
        },
        "subnetIdWaf": {
            "value": "[variables('subnetIdWaf')]",
            "type": "string"
        },
        "subnetIdSan": {
            "value": "[variables('subnetIdSan')]",
            "type": "string"
        },
        "subnetIdRedis": {
            "value": "[variables('subnetIdRedis')]",
            "type": "string"
        },
        "subnetIdElastic": {
            "value": "[variables('subnetIdElastic')]",
            "type": "string"
        },
        "subnetIdTika": {
            "value": "[variables('subnetIdTika')]",
            "type": "string"
        }
    }
}
